# joies

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/: chat.py  dashboard.py
data/catalog/: pieces.json
data/clients/: booking_model.joblib  booking_model_report.json  profiles.json
data/eval/: calibration_pairs.jsonl  golden_set.json  report.json  simulation_report.json
data/heritage/: stories.json
data/metrics/: events.jsonl
data/scenarios/: scenarios.json  scenarios_played.json
scripts/: business_case_report.py  precompute_scenarios.py  run_eval.py  run_simulator.py  seed.py  seed_client_profiles.py  seed_demo_metrics.py  seed_eval_calibration.py  train_booking_model.py
src/maison_concierge/: __init__.py  config.py  data_loader.py
src/maison_concierge/agents/: __init__.py  client.py  composer.py  demo_composer.py  demo_intent.py  intent.py  orchestrator.py  prompts.py  state.py
src/maison_concierge/analysis/: __init__.py  business_case.py  heritage_graph.py
src/maison_concierge/eval/: __init__.py  calibration.py  golden.py  groundedness.py  retrieval.py  runner.py  simulator.py
src/maison_concierge/i18n/: __init__.py  detect.py  strings.py
src/maison_concierge/memory/: __init__.py  conversation.py
src/maison_concierge/models/: __init__.py  catalog.py  client.py  conversation.py  tools.py
src/maison_concierge/observability/: __init__.py  metrics.py
src/maison_concierge/retrieval/: __init__.py  _chroma.py  catalog_rag.py  heritage_rag.py  hybrid.py  visual_search.py
src/maison_concierge/segmentation/: __init__.py  booking_model.py  profiles.py  segment.py
src/maison_concierge/tools/: __init__.py  appointment.py  leads.py  pricing.py
src/maison_concierge/ui/: __init__.py  chat_panel.py  scenarios_panel.py
tests/: test_business_case.py  test_data_loader.py  test_demo_mode.py  test_eval_calibration.py  test_eval_groundedness.py  test_eval_retrieval_metrics.py  test_heritage_graph.py  test_i18n.py  test_memory.py  test_metrics.py  test_models.py  test_orchestrator_integration.py  test_orchestrator_trace.py  test_retrieval_hybrid.py  test_segmentation.py  test_simulator.py  test_tools.py
