[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maison-concierge"
version = "0.1.0"
description = "Multi-agent GenAI client advisor for luxury maisons — chat, visual search, heritage RAG, appointments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gemma Gardela" }]
keywords = ["genai", "rag", "langgraph", "luxury", "multi-agent", "clip"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "rank-bm25>=0.2.2",
    "redis>=5.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
visual = [
    "open-clip-torch>=2.24.0",
    "torch>=2.2.0",
    "pillow>=10.0.0",
]
app = [
    "streamlit>=1.35.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "altair>=5.3.0",
    "pandas>=2.2.0",
    "networkx>=3.2",
    "pyvis>=0.3.2",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-redis",
]

[project.urls]
Homepage = "https://github.com/gemmagardela/maison-concierge"

[project.scripts]
maison-seed = "maison_concierge.scripts.seed:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maison_concierge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "N803", "N806", "RUF002"]  # N803/N806: ML convention — `X`, `X_train`. RUF002: unicode in docstrings (×, —) is fine.

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
